This file summarizes changes in WinMerge releases.
Numbers in parentheses refer to SourceForge.net tracker item numbers (#XXXXX) or
to Subversion revision numbers (rXXXXX).

WinMerge 2.7.7.3
  Resolve conflict files (cvs, svn...) (#1875129)
  BugFix: Fix Quick Compare regression in 2.7.7.2 (#1872165)
  Bugfix: Clipped text in file saving error message (#1874854)

WinMerge 2.7.7.2 - 2008-01-14 (r4915)
  Syntax highlighting for PowerShell files (#1859657)
  Syntax highlighting for PO(T) files (#1866221)
  Change font size with Ctrl + MouseWheel (#1865795, #1869686)
  Horizontal scrolling with Shift + MouseWheel (#1865795)
  Installer: Add support for integration with latest version of TortoiseCVS and
    TortoiseSVN x64 (#1865168)
  Close compare tab with middle mouse button (#1865220)
  Add index.html for documentation folders (#1866183)
  Manual: Clarify file filters folder name matching (#1867212)
  Improve file compare margin icons location (#1718699)
  Enable file compare to open binary files (#1869647)
  File encoding dialog for file compare (#1871079)
  BugFix: Crash when using TrackPoint middle-button scrolling (#1864040)
  BugFix: WinMerge didn't show the contents of the symbolic link target (#1864978)
  BugFix: Unused registry key HKCU\Thingamahoochie\WinMerge was created 
    (#1865202)
  BugFix: Register.bat didn't work on Windows 98 and Vista (#1869821)
  BugFix: Open-dialog was not displayed on Windows 98 (#1866442, #1869858)
  BugFix: Right mouse button didn't move cursor to new place (#1814184)
  Translation updates:
  - Spanish (#1867234)
  - Swedish (#1867765, #1867844)

WinMerge 2.7.7.1 - 2007-12-20 (r4842)
  New option to keep file's time when saving in file compare (#1851921)
  Installer: Link to translated ReadMe in Start menu, if file exists (#1805818)
  Add HTML-formatted release notes (#1851308, #1852534)
  Installer: Install release notes file (#1852599)
  Installer: Move manual to core files component and remove